--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,13 @@ repository = "https://github.com/SteveLauC/pup"
 
 
 [dependencies]
+anyhow = "1.0.56"
 base64 = "0.13.0"
-clap = {version = "3.1.8", features = ["cargo"] }
+clap = {version = "3.1.8", features = ["cargo"]}
+colored = "2.0.0"
+json = "0.12.4"
+regex = "1.5.5"
+reqwest = {version = "0.11.10", features = ["blocking"]}
+serde = "1.0.136"
+serde_json = "1.0.79"
 toml = "0.5.8"
