--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ base64 = "0.13.0"
 clap = {version = "3.1.8", features = ["cargo"]}
 colored = "2.0.0"
 json = "0.12.4"
+rayon = "1.5.2"
 regex = "1.5.5"
 reqwest = {version = "0.11.10", features = ["blocking"]}
 serde = "1.0.136"
