--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,6 @@ reqwest = {version = "0.11.10", features = ["blocking"]}
 serde = "1.0.136"
 serde_json = "1.0.79"
 toml = "0.5.8"
+
+[profile.release]
+strip = true
