--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ regex = "1.5.5"
 reqwest = {version = "0.11.10", features = ["blocking"]}
 serde = "1.0.136"
 serde_json = "1.0.79"
+termios = "0.3.3"
 toml = "0.5.8"
 
 [profile.release]
