--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,12 +17,12 @@ clap = {version = "3.1.8", features = ["cargo"]}
 colored = "2.0.0"
 json = "0.12.4"
 keyring = "1.1.2"
+nix = "0.24.2"
 rayon = "1.5.2"
 regex = "1.5.5"
 reqwest = {version = "0.11.10", features = ["blocking"]}
 serde = "1.0.136"
 serde_json = "1.0.79"
-termios = "0.3.3"
 toml = "0.5.8"
 
 [profile.release]
