change licence to license

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 edition = "2021"
 authors = ["SteveLauC <stevelauc@outlook.com>"]
 readme = "README.md"
-licence = "GPLv2"
+license = "GPLv2"
 categories = ["command-line-utilities"]
 repository = "https://github.com/SteveLauC/pup"
 keywords = ["command-line-tool", "markdown", "pic-uploader", "cli"]
