--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "pup"
-description = "A command-line tool that automatically uploads images from the markdown document to the GitHub repo and replaces the paths with the returned UR"
-version = "0.1.0"
+description = """A command-line tool that automatically uploads images from the \
+markdown document to the GitHub repo and replaces the paths with the returned URL
+"""
+version = "0.1.1"
 edition = "2021"
 authors = ["SteveLauC <stevelauc@outlook.com>"]
 readme = "README.md"
-license = "GPLv2"
+license = "GPL-2.0-only"
 categories = ["command-line-utilities"]
 repository = "https://github.com/SteveLauC/pup"
 keywords = ["command-line-tool", "markdown", "pic-uploader", "cli"]
@@ -13,12 +15,13 @@ keywords = ["command-line-tool", "markdown", "pic-uploader", "cli"]
 
 [dependencies]
 anyhow = "1.0.56"
+arboard = "3.1.0"
 base64 = "0.13.0"
 clap = {version = "3.1.8", features = ["cargo"]}
 colored = "2.0.0"
 json = "0.12.4"
 keyring = "1.1.2"
-nix = "0.25.0"
+nix = {version = "0.25.0", default-features = false, features = ["term"]}
 rayon = "1.5.2"
 regex = "1.5.5"
 reqwest = {version = "0.11.10", features = ["blocking"]}
