--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,21 +14,21 @@ keywords = ["command-line-tool", "markdown", "pic-uploader", "cli"]
 
 
 [dependencies]
-anyhow = "1.0.56"
+anyhow = "1.0.66"
 arboard = "3.1.0"
 base64 = "0.13.0"
-clap = {version = "4.0.15", features = ["cargo", "derive"]}
+clap = { version = "4.0.15", features = ["cargo", "derive"] }
 colored = "2.0.0"
 dirs = "4.0.0"
 json = "0.12.4"
 keyring = "1.1.2"
-nix = {version = "0.25.0", default-features = false, features = ["term"]}
 rayon = "1.5.2"
 regex = "1.5.5"
-reqwest = {version = "0.11.10", features = ["blocking"]}
+reqwest = { version = "0.11.10", features = ["blocking"] }
 serde = "1.0.136"
 serde_json = "1.0.79"
 toml = "0.5.8"
+termios = "0.3.3"
 
 [profile.release]
 strip = true
