--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ keywords = ["command-line-tool", "markdown", "pic-uploader", "cli"]
 anyhow = "1.0.66"
 arboard = "3.1.0"
 base64 = "0.13.0"
-clap = { version = "4.0.15", features = ["cargo", "derive"] }
+clap = { version = "4.0.15", features = ["cargo"] }
 colored = "2.0.0"
 dirs = "4.0.0"
 json = "0.12.4"
