--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ serde = "1.0.150"
 serde_json = "1.0.79"
 toml = "0.5.9"
 termios = "0.3.3"
+thiserror = "1.0.37"
 
 [profile.release]
 strip = true
