--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ keyring = "1.2.0"
 rayon = "1.6.1"
 regex = "1.7.0"
 reqwest = { version = "0.11.13", features = ["blocking"] }
-serde = "1.0.150"
+serde = {version = "1.0.150", features = ["derive"]}
 serde_json = "1.0.79"
 toml = "0.5.9"
 termios = "0.3.3"
