--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,13 @@ jobs:
     - uses: actions/checkout@v3
     - run: cargo fmt --all -- --check
 
+  Clippy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - run: cargo clippy
+
   Test:
     runs-on: ubuntu-latest
 
