--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ keywords = ["command-line-tool", "markdown", "pic-uploader", "cli"]
 anyhow = "1.0.71"
 arboard = "3.2.0"
 base64 = "0.21.0"
-clap = { version = "4.2.7", features = ["cargo"] }
+clap = { version = "4.2.7", features = ["cargo", "derive"] }
 colored = "2.0.0"
 dirs = "5.0.1"
 json = "0.12.4"
